2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndma_tape_simulator.c: Use full_read.
	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space
	  for a record.
	* ndmp-src/ndml_chan.c (ndmchan_n_avail_record): New function.
	* ndmp-src/ndmlib.h  (ndmchan_n_avail_record): New prototype.

2011-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Change message of "timeout waiting for REP" to
	  "Some estimate timeout on %s, using server estimate if possible".

2011-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.pod: new offset and size arguments of xfer->start.
	* perl/Amanda/Xfer.swg: Add xfer_element_set_size.

2011-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-source-recovery.c: Never send more than the number
	  of bytes requested.
	* perl/Amanda/Xfer.swg (xfer_start): New offset and size arguments.
	* xfer-src/xfer-element.c: Add set_size method.
	* xfer-src/xfer-element.h (XferElement): Add size field.
	* xfer-src/xfer-test.c: Add offset=0 and size=0 to xfer_start call.
	* xfer-src/xfer.c (xfer_start): Add offset and size arguments. Call
	  xfer_element_set_size for the first element if size is set.
	* xfer-src/xfer.h (xfer_start): New prototype.
	* server-src/amfetchdump.pl, server-src/amidxtaped.pl,
	  server-src/amvault.pl: Call xfer->start() with offset and size
	  arguments.

2011-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: Print size in bytes for taper log.
	* server-src/find.h (find_result_t): Add bytes.
	* server-src/find.c: Parse 'bytes' in 'log' file.
	* perl/Amanda/Report.pm: Parse 'bytes' in 'log' file.
	* perl/Amanda/DB/Catalog.pm: Parse 'bytes' in 'log' file.
	* server-src/amstatus.pl: Parse 'bytes' in 'amdump' log file.
	* installcheck/Amanda_DB_Catalog.pl: Fix for log file format change.
	* installcheck/taper.pl: Fix for log file format change.

2011-01-03  Jean-Louis Martineau <martineau@zmanda.com>