@@ -1,3 +1,8 @@
+2011-01-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/diskfile.c: Do not report error if a dle is listed twice
+	  in argument list.
+	* installcheck/amadmin.pl: Test it.
+
 2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
 	* ndmp-src/amndma_tape_simulator.c: Use full_read.
 	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space
